# OpenGL-Testing

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  EBO.h  VAO.h  VBO.h  shaderClass.h
include/glad/: glad.h
src/: Camera.cpp  EBO.cpp  VAO.cpp  VBO.cpp  glad.c  shaderClass.cpp
src/shaders/: default.vert
